@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2022-07-07 r82558) -- "Unsuffered Consequences"
-Copyright (C) 2022 The R Foundation for Statistical Computing
+R Under development (unstable) (2023-03-28 r84086) -- "Unsuffered Consequences"
+Copyright (C) 2023 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -2176,12 +2176,14 @@ Response: cbind(ncases, ncontrols)
 Terms added sequentially (first to last)
 
 
-            Df Deviance Resid. Df Resid. Dev
-NULL                           87     367.95
-agegp        5  121.045        82     246.91
-tobgp        3   36.639        79     210.27
-alcgp        3  127.933        76      82.34
-tobgp:alcgp  9    5.451        67      76.89
+            Df Deviance Resid. Df Resid. Dev  Pr(>Chi)    
+NULL                           87     367.95              
+agegp        5  121.045        82     246.91 < 2.2e-16 ***
+tobgp        3   36.639        79     210.27 5.485e-08 ***
+alcgp        3  127.933        76      82.34 < 2.2e-16 ***
+tobgp:alcgp  9    5.451        67      76.89    0.7934    
+---
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
 > ## Try a linear effect of alcohol and tobacco
 > model2 <- glm(cbind(ncases, ncontrols) ~ agegp + unclass(tobgp)
 +                                          + unclass(alcgp),
@@ -3590,7 +3592,7 @@ c0   -5.14
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  5.453 0.122 5.614 0 0 
+Time elapsed:  1.134 0.029 1.167 0 0 
 > grDevices::dev.off()
 null device 
           1 
