@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2023-03-06 r83941) -- "Unsuffered Consequences"
+R Under development (unstable) (2023-03-28 r84086) -- "Unsuffered Consequences"
 Copyright (C) 2023 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -2846,8 +2846,8 @@ Response: y
 Terms added sequentially (first to last)
 
 
-     Df Deviance Resid. Df Resid. Dev
-NULL                    10     2.7404
+     Df Deviance Resid. Df Resid. Dev F Pr(>F)
+NULL                    10     2.7404         
 > predict(fit)
  1  2  3  4  5  6  7  8  9 10 
  0  0  0  0  0  0  0  0  0  0 
@@ -2933,9 +2933,9 @@ Response: y
 Terms added sequentially (first to last)
 
 
-     Df Deviance Resid. Df Resid. Dev
-NULL                    10     2.7404
-x     0        0        10     2.7404
+     Df Deviance Resid. Df Resid. Dev F Pr(>F)
+NULL                    10     2.7404         
+x     0        0        10     2.7404         
 > predict(fit)
  1  2  3  4  5  6  7  8  9 10 
  0  0  0  0  0  0  0  0  0  0 
@@ -6354,7 +6354,7 @@ function(given = NULL) {
     if (is.null(given)) callObj$default <- TRUE
     callObj
 }
-<bytecode: 0x25ac880>
+<bytecode: 0x5555f08>
 > print(foo, useSource = FALSE)
 function (given = NULL) 
 {
@@ -6365,7 +6365,7 @@ function (given = NULL)
         callObj$default <- TRUE
     callObj
 }
-<bytecode: 0x25ac880>
+<bytecode: 0x5555f08>
 > attr(foo, "srcref") <- NULL
 > foo
 function (given = NULL) 
@@ -6377,7 +6377,7 @@ function (given = NULL)
         callObj$default <- TRUE
     callObj
 }
-<bytecode: 0x25ac880>
+<bytecode: 0x5555f08>
 > (f <- structure(function(){}, note = "just a note",
 +                 yada = function() "not the same"))
 function(){}
